# tiny-docker-images

./: LICENSE  README.md  makefile
golang/: .gitignore  Dockerfile  Dockerfile.base  README.md  go.mod  main.go  makefile
node/: .gitignore  Dockerfile  README.md  makefile  package-lock.json  package.json  tsconfig.json
node/src/: main.ts
python/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  makefile  pyproject.toml
python/src/: main.py
